--- a/style.css
+++ b/style.css
@@ -1,49 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body
 {
-    font-family: 'Poppins', sans-serif;
     margin: 0%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    
 }
-.font
+.half_part h1
+{
+    font-size: 40px;
+    padding-top: 15%;
+}
+.container
 {
     display: flex;
     justify-content: space-between;
-}
-.onethird
-{
-    width: 30%;
-    height: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 15px;
-    padding: 15px;
-    box-shadow: 5px 5px 10px 1px gray;
+    margin: auto;
+    width: 1140px;
     
 }
 .half_part
 {
-    width: 50%;
-    padding-left: 6%;
+    width: 80%;
+    padding-left: 5%;
     padding-right: 5%;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
 
 }
 .half_part img
 {
-    width: 70%;
+    width: 100%;
+    height: 100%;
 }
 #order
 {  
     text-decoration: none;
-    font-weight: 690;
+    background: linear-gradient(to right, rgb(255, 136, 0), orangered);
+    border-radius: 25px;
+    box-shadow: 1px 2px 10px 5px rgba(255, 59, 0, 0.2);
+    padding: 15px 25px;
     color: white;
-    background-image: linear-gradient(orangered,salmon);
-    padding: 10px 25px 10px 25px;
-    border-radius: 35px;
 }
 #imagine
 {
-    padding-top: 5%;
     padding-bottom: 5%;"
+    padding-left: 15px;
+    
 }
 .bottom
 {
@@ -52,6 +54,7 @@ body
     padding-right: 20%;
     margin-left: 3%;
 }
+
 #flexible
 {
     padding-left: 15%;
@@ -60,7 +63,7 @@ body
 }
 #flexible img
 {
-    width: 62.5%;
+    width: 75.5%;
 }
 .services
 {
@@ -71,20 +74,36 @@ body
 {
     padding-right: 35%;
     padding-left: 35%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
-footer h2 
+#footer .container 
 {
+    margin-top: 5%;
+    flex-direction: column;
     text-align: center;
     background-color: black;
     color: white;
-}
-footer p{
-    color: white;
-    background-color: black;
+    width: 40%;
+    padding: 40px 400px;
 }
 
-.onethird img
+.container .recipe 
+{
+    width: 28%;
+    border-radius: 25px;
+    padding: 20px;
+    box-shadow: 1px 2px 10px 5px rgba(0, 0, 0, 0.1);
+    height: auto;
+    
+}
+.recipe img
 {
     width: 100%;
 }
-
+.container .recipe p
+{
+    width: 100%;
+    margin: 5px 0 20px 0;
+    text-align: left;
+}
