--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body
     background-color: black;
     color: white;
     width: 40%;
-    padding: 40px 400px;
+    padding: 30px 455.5px;
 }
 
 .container .recipe 
@@ -95,6 +95,7 @@ body
     padding: 20px;
     box-shadow: 1px 2px 10px 5px rgba(0, 0, 0, 0.1);
     height: auto;
+    margin-bottom: 2%;
     
 }
 .recipe img
@@ -106,4 +107,26 @@ body
     width: 100%;
     margin: 5px 0 20px 0;
     text-align: left;
+}
+.pizzaperi
+{
+    width: 80%;
+    margin-left: 2%;
+    margin-right: 2%;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 10px 10px 40px rgba(255, 59, 0, 0.2);
+    text-align: center;
+    color: rgb(202, 70, 70);
+    
+    
+}
+.pizzaperi img
+{
+    border-radius: 3%;  
+    width: 70%; 
+}
+.click
+{
+    margin-bottom: 3%;
 }
