--- a/style.css
+++ b/style.css
@@ -41,10 +41,10 @@ body
     padding: 15px 25px;
     color: white;
 }
-#imagine
+.imagine
 {
-    padding-bottom: 5%;"
-    padding-left: 15px;
+    padding-bottom: 6%;
+    padding-left: 2px;
     
 }
 .bottom
